reset to pre-groovy and expand imports